# ToyC_Compiler

./: .gitignore  Bug收集操作规范.md  CMakeLists.txt  README.md  ToyC编译器项目四人分工方案.md  commits-log.xlsx  实验报告格式模版.docx
cmake/: backend_integration.cmake  ir_integration.cmake
docs/: MEMBER_C.md
include/ast/: ast.h
include/backend/: code_generator.h  frame_layout.h  register_allocator.h  riscv_instruction.h
include/frontend/: lexer.h  parser.h  token.h
include/ir/: basic_block.h  ir.h  ir_builder.h
include/optimizer/: cfg_simplify.h  constant_fold.h  copy_prop.h  cse.h  dead_code.h  optimizer.h  peephole.h
include/sema/: constant_evaluator.h  scope.h  semantic_analyzer.h  semantic_context.h  semantic_error.h  semantic_result.h  symbol.h
scripts/: run_frontend_tests.ps1  run_ir_tests.ps1  run_sema_tests.ps1
src/: main.cpp
src/ast/: ast.cpp
src/backend/: code_generator.cpp  frame_layout.cpp  register_allocator.cpp  riscv_instruction.cpp
src/frontend/: lexer.cpp  parser.cpp
src/ir/: basic_block.cpp  ir.cpp  ir_builder.cpp
src/optimizer/: cfg_simplify.cpp  constant_fold.cpp  copy_prop.cpp  cse.cpp  dead_code.cpp  optimizer.cpp  peephole.cpp
src/sema/: constant_evaluator.cpp  scope.cpp  semantic_analyzer.cpp  semantic_context.cpp
test_output/: dump_ir_test.cpp  f04.tc  f05.tc  f07.tc  f09.tc  f10.tc  f13.tc  f14.tc  f16.c  f17.c  f19.c  f19.tc  f21.tc  f22.tc  f23.tc  f24.c  f25.tc  f26.tc  f28_like.tc  global.tc  global_const.tc  global_const_opt.ir  global_mut.tc  global_mut_opt.ir  huge_vars.tc  if_local.tc  loop.tc  loop_opt.ir  many_vars.tc  nested.tc  opt_f05.tc  opt_f19.tc  opt_nested.tc  return42.tc  sub.tc  sub_no.ir  sub_opt.ir  tail.tc  tail_no.ir  tail_opt.ir  (+1 more)
tests/: test_diff.sh  test_local.ps1  test_local.sh
tests/backend/: test_simple.cpp
tests/benchmark/: fibonacci.tc  global_vars.tc  loop_sum.tc  nested_loops.tc  run_benchmark.sh
tests/integration/: test_abc_pipeline.cpp
tests/ir/: test_ir.cpp
tests/ir/support/: symbol_table_builder.cpp  symbol_table_builder.h
tests/optimization/: test_cse_noncommutative.cpp  test_optimizer.cpp
tests/parser/: basic.tc
tests/sema/: test_sema.cpp  test_sema_integration.cpp
